--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,11 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*", "node_modules/*", "src/types/*"]
+    },
+    "allowJs": true
+  },
   "files": [],
   "references": [
     {
