SOW-011: Install Firebase, .env, Sample firebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "target": "esnext", // hoặc phiên bản bạn đang sử dụng
+    "module": "esnext", // hoặc "commonjs" tùy thuộc vào dự án
+    "strict": true, // Thêm các kiểm tra nghiêm ngặt
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*", "node_modules/*", "src/types/*"]
@@ -14,5 +20,6 @@
     {
       "path": "./tsconfig.app.json"
     }
-  ]
+  ],
+  "types": ["node"]
 }
