--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "contentful": "^11.2.0",
     "firebase": "^11.0.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
